<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFClock</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="newAlarm">Create New Alarm</string>
    <string name="title_activity_create_alarm">CreateAlarm</string>
    <string name="spin">Your alarm type.</string>
    <string name="spin2">Your unlock method.</string>
    <string name="spin3">Your alarm noise(s)</string>
    <string name="startText">Start Time</string>
    <string name="endText">End Time</string>
    <string name="alarmTone">Tone</string>
    <string name="M">M</string>
    <string name="T">T</string>
    <string name="W">W</string>
    <string name="F">F</string>
    <string name="S">S</string>
    <string name="alarmName">Name:</string>
    <string name="Vibrate">Vibrate</string>
    <string name="Weekly">Repeat</string>
    <string name="AlarmTone">Tone:</string>
    <string name="createAlarm">Save Alarm</string>
    <string name="Interval">Interval</string>
    <string-array name="alarm_choices">
        <item>Marathon</item>
        <item>Single</item>
    </string-array>

    <string-array name="alarm_endType">
        <item>NFC Tap</item>
        <item>Tap to Silence</item>
    </string-array>

    </resources>
