<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_weight="1"
    tools:context="com.project.team16.nfclock.CreateAlarm"
    android:background="@color/DarkPrimary"
    android:id="@+id/topLayout">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:id="@+id/timePickers"
        android:weightSum="1">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/startTimeDisplay"
            android:text="@string/startText"
            android:layout_weight="0.5"
            android:gravity="center"
            android:clickable="true"
            android:focusable="false"
            android:singleLine="true"
            android:textSize="25sp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/endTimeDisplay"
            android:text="@string/endText"
            android:layout_weight="0.5"
            android:gravity="center"
            android:singleLine="true"
            android:clickable="true"
            android:focusable="false"
            android:textSize="25sp" />
    </LinearLayout>
    
    <View
        android:id="@+id/div1"
        style="@style/DividerMaterial"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/timePickers"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7"
        android:id="@+id/weekPickers"
        android:layout_below="@+id/div1"
        android:layout_centerHorizontal="true">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleMonday"
            android:textOn="@string/M"
            android:textOff="@string/M"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/my_btn_toggle"
            android:padding="2sp"
            />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleTuesday"
            android:textOn="@string/T"
            android:textOff="@string/T"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/my_btn_toggle"
            android:padding="2sp"
            />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleWednesday"
            android:textOn="@string/W"
            android:textOff="@string/W"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/my_btn_toggle"
            android:padding="2sp"
            />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleThursday"
            android:textOn="@string/T"
            android:textOff="@string/T"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/my_btn_toggle"
            android:padding="2sp"
            />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleFriday"
            android:textOn="@string/F"
            android:textOff="@string/F"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/my_btn_toggle"
            android:padding="2sp"
            />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleSaturday"
            android:textOn="@string/S"
            android:textOff="@string/S"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/my_btn_toggle"
            android:padding="2sp"
            />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleSunday"
            android:textOn="@string/S"
            android:textOff="@string/S"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/my_btn_toggle"
            android:padding="2sp"
            />

        </LinearLayout>

    <View
        android:id="@+id/div2"
        style="@style/DividerMaterial"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/weekPickers"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/nameLayout"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_below="@+id/div2"
        android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_weight="0.15"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:text="@string/alarmName"
        android:textSize="18dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_weight="0.85"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:singleLine="true"
        android:textAlignment="center"
        android:id="@+id/alarmNameDisplay"
        />

    </LinearLayout>

    <View
        android:id="@+id/div3"
        style="@style/DividerMaterial"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameLayout"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/toggles"
        android:layout_below="@+id/div3"
        android:background="@color/white"
        android:paddingBottom="5dp"
        android:layout_centerHorizontal="true">

         <CheckBox
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/Vibrate"
             android:id="@+id/toggleVibrate"
             android:layout_gravity="center_horizontal"
             />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Weekly"
            android:id="@+id/repeatWeekly"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

    <View
        android:id="@+id/div4"
        style="@style/DividerMaterial"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toggles"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/div4"
        android:paddingBottom="5dp"
        android:id="@+id/alarmToneLayout"
        android:background="@color/white"
        android:weightSum="1">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:id="@+id/alarmTone"
            android:text="@string/alarmTone"
            android:clickable="true"
            android:focusable="false"
            android:layout_weight="0.3"
            android:gravity="center"
            android:onClick="onToneClick"
            android:singleLine="true"
            android:textSize="18sp" />

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:id="@+id/alarmToneDisplay"
            android:text=""
            android:focusable="false"
            android:clickable="true"
            android:layout_weight="0.8"
            android:gravity="center"
            android:onClick="onToneClick"
            android:singleLine="true"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:id="@+id/div5"
        style="@style/DividerMaterial"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/alarmToneLayout"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/div5"
        android:id="@+id/alarmIntervalLayout"
        android:paddingBottom="5dp"
        android:background="@color/white"
        android:weightSum="1">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:id="@+id/alarmInterval"
            android:text="@string/Interval"
            android:clickable="true"
            android:layout_weight="0.3"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="18sp" />

        <EditText
            android:layout_width="0px"
            android:digits="0123456789."
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:id="@+id/alarmIntervalDisplay"
            android:text=""
            android:focusable="true"
            android:layout_weight="0.8"
            android:singleLine="true"
            android:gravity="center"
            android:textSize="18sp" />
    </LinearLayout>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/createAlarm"
        android:id="@+id/saveAlarmButton"
        android:textColor="@color/white"
        android:background="@color/DarkPrimary"
        android:onClick="saveAlarm"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:layout_above="@+id/saveAlarmButton"
        android:layout_below="@+id/alarmIntervalLayout">
    </LinearLayout>

</RelativeLayout>
